--- a/etracs/docker-compose.yml
+++ b/etracs/docker-compose.yml
@@ -1,9 +1,7 @@
 version: "3"
 
 services:
-  #
-  # notification server
-  #
+  
   rameses-notification-server:
     image: "ramesesinc/notification-server:1.0"
     container_name: rameses-notification-server
@@ -16,9 +14,7 @@ services:
     ports: 
       - "7080:8080"
 
-  #
-  # etracs download server
-  #
+
   download-server:
     image: nginx:latest
     container_name: download-server
@@ -33,13 +29,10 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./etracs/download/conf.d:/etc/nginx/conf.d
-      - ./etracs/download/resources:/resources
+      - ./download/conf.d:/etc/nginx/conf.d
+      - ./download/resources:/resources
 
 
-  #
-  # etracs server
-  #
   etracs25-server:
     image: ramesesinc/etracs25-server-city:255.01.002
     container_name: etracs25-server
@@ -50,7 +43,7 @@ services:
         max-file: "5"
         max-size: 10m
     env_file:
-      - ./global.conf
+      - ./env.conf
     ports:
       - "8060:8060"
       - "8061:8061"
@@ -61,62 +54,3 @@ services:
       - ./etracs/server/datasources:/apps/server/workspace/services/datasources
       - ./etracs/server/adapters:/apps/server/workspace/services/apps/etracs25/adapters/ext
       - ./etracs/server/modules:/apps/server/workspace/services/apps/etracs25/modules
-
-
-  #
-  # mail server
-  #
-  gdx-mail-server: 
-    image: "ramesesinc/mail-server:latest"
-    container_name: gdx-mail-server
-    restart: always
-    logging: 
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "10m"
-    env_file:
-      - ./global.conf
-      - ./gdx-client/env.conf
-    ports:
-      - "25:25"
-
-
-  #
-  # proxy server
-  #
-  gdx-proxy-server:
-    image: "ramesesinc/gdx-proxy-server:v001"
-    container_name: gdx-proxy-server
-    restart: always
-    logging: 
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "10m"
-    environment:
-      TZ: "Asia/Manila"
-    ports:
-      - "8500:80"
-
-
-  #
-  # gdx client
-  #
-  gdx-client:
-    image: "ramesesinc/gdx-client:v001"
-    container_name: gdx-client
-    restart: always
-    logging: 
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "10m"
-    env_file:
-      - ./global.conf
-      - ./gdx-client/env.conf
-    ports:
-      - "8571:8571"
-    links:
-      - gdx-mail-server
-      - gdx-proxy-server
