--- a/gdx-client/env.conf
+++ b/gdx-client/env.conf
@@ -1,3 +1,9 @@
+TZ=Asia/Manila
+
+app_server_ip=192.168.1.2
+local_etracs_host=192.168.1.2:8070
+channel=160
+
 MAIL_RELAY_HOST=smtp.gmail.com
 MAIL_RELAY_PORT=587
 MAIL_RELAY_USER=lguiligan@gmail.com
