--- a/etracs/env.conf
+++ b/etracs/env.conf
@@ -9,7 +9,7 @@ dbserver_host=110.100.210.7
 dbserver_user=sa
 dbserver_pass=1paSsword1
 
-db_main=etracs25_iligan
+db_main=etracs255_iligan
 db_image=etracs25_iligan_image
 db_notification=etracs25_iligan_notification
 
