--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -19,4 +19,5 @@ services:
 
     volumes:
       - ./res/ws_queue_listener:/apps/server/workspace/services/apps/queue/connections/ws_queue_listener
+      - ./res/lgu-logo.png:/apps/server/workspace/web/monitor.queue/res/images/agent-logo.png
       - ./res/project.conf:/apps/server/workspace/web/monitor.queue/project.conf
