--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - "9970:8070"
 
     volumes:
+      - ./res/anubis-cms2.jar:/apps/server/lib/anubis-cms2.jar
       - ./res/ws_queue_listener:/apps/server/workspace/services/apps/queue/connections/ws_queue_listener
       - ./res/lgu-logo.png:/apps/server/workspace/web/monitor.queue/res/images/agent-logo.png
       - ./res/project.conf:/apps/server/workspace/web/monitor.queue/project.conf
