--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -2,6 +2,24 @@ version: "3"
 
 services:
   
+  queue-www:
+    image: nginx:latest
+    container_name: queue-www
+    restart: always
+    logging:
+      driver: "json-file"
+      options: 
+        max-file: "5"
+        max-size: 10m
+    environment:
+      TZ: "Asia/Manila"
+    ports:
+      - "9980:80"
+    volumes:
+      - ./www/conf.d:/etc/nginx/conf.d
+      - ./www/resources:/resources
+
+
   queue-server:
     image: ramesesinc/queue-server:255.01.001
     container_name: queue-server
@@ -12,6 +30,9 @@ services:
       options:
         max-file: "5"
         max-size: "10m"
+
+    links:
+      - queue-www
 
     ports:
       - "9999:8080"
