--- a/queue/env.conf
+++ b/queue/env.conf
@@ -1,5 +1,9 @@
 TZ=Asia/Manila
 
-lgu_name=City of Iligan
 local_etracs_host=110.100.210.9:8070
 local_etracs_wshost=110.100.210.9:8060
+blockingTimeout=60000
+
+lgu_name=City of Iligan
+
+#video_source_1=http://110.100.210.9:9999/videos/sample.mp4
