--- a/queue/env.conf
+++ b/queue/env.conf
@@ -6,4 +6,5 @@ blockingTimeout=60000
 
 lgu_name=City of Iligan
 
-#video_source_1=http://110.100.210.9:9999/videos/sample.mp4
+video_source_1=http://110.100.210.9:9999/videos/justforlaughs-001.mp4
+video_source_2=http://110.100.210.9:9999/videos/justforlaughs-002.mp4
