--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -36,3 +36,5 @@ services:
     ports:
       - "9980:8080"
       - "9970:8070"
+    volumes:
+      - ./content/queue:/apps/server/web/monitor.queue/content/queue
