--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
 
   queue-server:
-    image: ramesesinc/queue-server:255.01.002
+    image: ramesesinc/queue-server:255.01.003
     container_name: queue-server
     restart: always
     logging: 
@@ -38,4 +38,4 @@ services:
       - "9980:8080"
       - "9970:8070"
     volumes:
-      - ./content/queue:/apps/server/web/monitor.queue/content/queue
+      - ./files/queue:/apps/server/web/monitor.queue/files/queue
