--- a/queue/env.conf
+++ b/queue/env.conf
@@ -1,7 +1,8 @@
 TZ=Asia/Manila
 
-local_etracs_host=110.100.210.9:8070
-local_etracs_wshost=110.100.210.9:8060
+app_server_ip=localhost
+local_etracs_host=${app_server_ip}:8070
+local_etracs_wshost=${app_server_ip}:8060
 blockingTimeout=60000
 
-lgu_name=City of Iligan
+lgu_name=LGU NAME
