--- a/gdx-client/env.conf
+++ b/gdx-client/env.conf
@@ -1,8 +1,8 @@
 TZ=Asia/Manila
 
-app_server_ip=110.100.210.9
-local_etracs_host=110.100.210.9:8070
-channel=169
+app_server_ip=localhost
+local_etracs_host=${app_server_ip}:8070
+channel=000
 
 MAIL_RELAY_HOST=smtp.gmail.com
 MAIL_RELAY_PORT=587
