--- a/etracs/docker-compose.yml
+++ b/etracs/docker-compose.yml
@@ -51,9 +51,7 @@ services:
       - "8070:8070"
       - "8080:8080"
     volumes:
-      - ./server/server.conf:/apps/server/bin/server.conf
+      - ../_custom/etracs_modules:/modules
       - ./server/dev_modules:/apps/server/workspace/services/modules
       - ./server/datasources:/apps/server/workspace/services/datasources
-      - ./server/adapters:/apps/server/workspace/services/apps/etracs25/adapters/ext
-      - ./server/connections:/apps/server/workspace/services/apps/etracs25/connections/ext
       - ./server/modules:/apps/server/workspace/services/apps/etracs25/modules
