water: added proxy plugin

--- a/etracs/env.conf
+++ b/etracs/env.conf
@@ -1,6 +1,7 @@
 TZ=Asia/Manila
 #JAVA_MEM=-Xms1024m -Xmx8192m
 
+
 app_server_ip=localhost
 
 gdx_host=${app_server_ip}
@@ -16,3 +17,5 @@ db_notification=etracs_notification
 channel=000
 
 blockingTimeout=300000
+
+water_host=${app_server_ip}:${@@osiris3:port}
