--- a/gdx-client/env.conf
+++ b/gdx-client/env.conf
@@ -6,6 +6,6 @@ channel=169
 
 MAIL_RELAY_HOST=smtp.gmail.com
 MAIL_RELAY_PORT=587
-MAIL_RELAY_USER=lguiligan@gmail.com
-MAIL_RELAY_PASS=p@ssw0rd
-ROUTE_CUSTOM=0.0.0.0/24
+MAIL_RELAY_USER=filipizenmailer@gmail.com
+MAIL_RELAY_PASS=rameses1234
+ROUTE_CUSTOM=110.100.210.0/24
