updated queue plugin

--- a/gdx-client/env.conf
+++ b/gdx-client/env.conf
@@ -1,7 +1,9 @@
 TZ=Asia/Manila
+JAVA_MEM=-Xms1024m -Xmx4096m
 
-app_server_ip=110.100.210.9
-local_etracs_host=110.100.210.9:8070
+app_server_ip=localhost
+local_etracs_host=${app_server_ip}:8070
+
 channel=169
 
 MAIL_RELAY_HOST=smtp.gmail.com
