--- a/etracs/docker-compose.yml
+++ b/etracs/docker-compose.yml
@@ -44,6 +44,7 @@ services:
         max-size: 10m
     env_file:
       - ./env.conf
+      - ../_custom/env.conf
     ports:
       - "8060:8060"
       - "8061:8061"
