--- a/etracs/env.conf
+++ b/etracs/env.conf
@@ -1,13 +1,13 @@
 TZ=Asia/Manila
 JAVA_MEM=-Xms1024m -Xmx8192m
 
-app_server_ip=110.100.210.9
+app_server_ip=localhost
 
-gdx_host=110.100.210.9
+gdx_host=localhost
 
-dbserver_host=110.100.210.7
+dbserver_host=localhost
 dbserver_user=sa
-dbserver_pass=1paSsword1
+dbserver_pass=1234
 
 db_main=etracs255_iligan
 db_image=etracs25_iligan_image
@@ -16,3 +16,5 @@ db_notification=etracs25_iligan_notification
 channel=169
 
 blockingTimeout=300000
+
+queue_ws_server_host=localhost:9960
