--- a/queue/env.conf
+++ b/queue/env.conf
@@ -1,7 +1,8 @@
 TZ=Asia/Manila
+JAVA_MEM=-Xms1024m -Xmx4096m
 
-local_etracs_host=110.100.210.9:8070
-local_etracs_wshost=110.100.210.9:8060
+local_etracs_host=localhost:8070
+local_etracs_wshost=localhost:8060
 blockingTimeout=60000
 
 lgu_name=City of Iligan
