--- a/queue/docker-compose.yml
+++ b/queue/docker-compose.yml
@@ -38,5 +38,6 @@ services:
       - "9960:8060"
     volumes:
       - ../_custom/images/lgu-logo.png:/webroot/res/images/lgu-logo.png
+      - ../_custom/queue/css:/webroot/themes/default/css
       - ../_custom/queue/files/queueing.pg:/webroot/files/queueing.pg
       - ../_custom/queue/files/queue.pg:/webroot/files/queue.pg
