--- a/email/mail-primary/env.conf
+++ b/email/mail-primary/env.conf
@@ -4,6 +4,6 @@ app_server_ip=localhost
 
 MAIL_RELAY_HOST=smtp.gmail.com
 MAIL_RELAY_PORT=587
-MAIL_RELAY_USER=lgu@gmail.com
-MAIL_RELAY_PASS=1234567890
+MAIL_RELAY_USER=ctoiligancity@gmail.com
+MAIL_RELAY_PASS=vupsczgffxssccnp
 ROUTE_CUSTOM=0.0.0.0/24
