--- a/appserver/etracs/docker-compose.yml
+++ b/appserver/etracs/docker-compose.yml
@@ -29,3 +29,5 @@ services:
 
       - ../../_custom/output:/apps/server/output
       - ../../_custom/fileserver:/fileserver
+
+      - ./dev/treasury/rameses-gov-treasury-services.jar:/services/modules/treasury/rameses-gov-treasury-services.jar
